# sentiment-analysis-classification

./: .config  .embedding_config  .env.example  .gitignore  .ml_config  Noise_Removal_Criteria.md  README.md  config.yaml  decoder_config.yaml  dl_config.yaml  embedding_config.yaml  encoder_config.yaml  ml_config.yaml  pyproject.toml
.github/workflows/: deploy-pages.yml
cloudflare/: README.md  main.js
docker-setup/: README.md  dockerfile  main.py  pyproject.toml
models/: metrics_without_noise_generation_log.json
models/decoder_models/: metrics_without_noise_summary.json
models/decoder_models/Qwen_Qwen3-4B-Instruct-2507_20260509_161431/: metadata.json
models/decoder_models/Qwen_Qwen3_4B_Instruct_2507_20260507_134744/: metadata.json  metrics_without_noise.json
models/decoder_models/Qwen_Qwen3_4B_Instruct_2507_20260507_141802/: metadata.json  metrics_without_noise.json
models/decoder_models/Qwen_Qwen3_4B_Instruct_2507_20260507_142906/: metadata.json  metrics_without_noise.json
models/decoder_models/Qwen_Qwen3_4B_Instruct_2507_20260507_143454/: metadata.json  metrics_without_noise.json
models/decoder_models/Qwen_Qwen3_4B_Instruct_2507_20260507_145236/: metadata.json  metrics_without_noise.json
models/decoder_models/Qwen_Qwen3_4B_Instruct_2507_20260509_123323/: metadata.json
models/decoder_models/Qwen_Qwen3_8B_20260509_020630/: metadata.json
models/decoder_models/google_gemma_4_26B_A4B_it_20260507_152425/: metadata.json  metrics_without_noise.json
models/decoder_models/google_gemma_4_e4b_it_20260507_023321/: metadata.json  metrics_without_noise.json
models/decoder_models/google_gemma_4_e4b_it_20260507_031516/: metadata.json  metrics_without_noise.json
models/decoder_models/google_gemma_4_e4b_it_20260507_033926/: metadata.json  metrics_without_noise.json
models/decoder_models/mistralai_Mistral_7B_Instruct_v0.3_20260507_140505/: metadata.json  metrics_without_noise.json
models/decoder_models/mistralai_Mistral_7B_Instruct_v0.3_20260507_151443/: metadata.json  metrics_without_noise.json
models/decoder_models/openai_community_gpt2_20260507_015229/: metadata.json  metrics_without_noise.json
models/decoder_models/openai_community_gpt2_20260507_115008/: metadata.json  metrics_without_noise.json
models/decoder_models/openai_community_gpt2_20260507_121459/: metadata.json  metrics_without_noise.json
models/decoder_models/openai_community_gpt2_medium_20260507_153921/: metadata.json  metrics_without_noise.json
models/dl_models/: metrics_without_noise_summary.json
models/dl_models/2732cfe8073bf5c9/: dl_summary.json
models/embeddings_runs/1984dcd37b48403a/: embedding_summary.json
models/embeddings_runs/69b237c8ec77cafb/: embedding_summary.json
models/encoder_models/: metrics_without_noise_summary.json
models/ml_models/: metrics_without_noise_summary.json  ml_summary.json
models/ml_models/7e59a2c67cab1cde/: ml_summary.json
sentimentApp/: index.html  vite.config.ts
sentimentApp/src/: App.css  App.tsx  index.css  vite-env.d.ts
sentimentFlow/: .config
(+983 files in other folders)
