[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "sentiment-analysis-classification"
version = "0.1.0"
description = "Sentiment analysis and text classification experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"pandas==3.0.2",
	"scikit-learn==1.8.0",
    "numpy==2.4.4",
    "fastapi==0.136.0",
	"gensim==4.4.0",
	"nltk==3.9.4",
	"tqdm==4.67.0",
	"xgboost==2.1.4",
	"torch",
	"torchvision",
	"codeview==1.0.0",
]

[project.optional-dependencies]
notebook = [
	"jupyter>=1.1",
	"ipykernel>=6.29",
	"matplotlib>=3.9",
	"seaborn>=0.13",
]
dev = [
	"pytest>=8.3",
	"ruff>=0.6",
]

# pip examples:
# - pip install .
# - pip install -e .
# - pip install -e .[notebook]
# - pip install -e .[dev,notebook]

[dependency-groups]
notebook = [
	"jupyter>=1.1",
	"ipykernel>=6.29",
	"matplotlib>=3.9",
	"seaborn>=0.13",
]
dev = [
	"pytest>=8.3",
	"ruff>=0.6",
]

[tool.uv]
default-groups = ["dev", "notebook"]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["sentimentFlow"]

# uv examples:
# - uv sync
# - uv sync --group dev
# - uv sync --group notebook
# - uv sync --no-default-groups
# - uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu126
