[project]
name = "hf-decoder-text-classifier-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch==2.11.0+cu126",
    "fastapi",
    "uvicorn[standard]",
    "transformers>=5.6.2",
    "accelerate",
    "sentencepiece",
    "protobuf",
    "huggingface-hub",
    "pydantic",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true